--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,9 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+
+.foxcolor{
+  background-color: rgb(248,106,45);
+  color: white;
+}
