--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -74,3 +74,17 @@ ul {
 .img-logo {
     max-height: 50px;
 }
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid $foxi; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
