finished loading animation

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,7 +75,15 @@ ul {
     max-height: 50px;
 }
 
-.loader {
+.loader-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+.loader {    
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid $foxi; /* Blue */
     border-radius: 50%;
@@ -87,4 +95,19 @@ ul {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+.overlay{
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 20000;
+    cursor: pointer;
 }
