--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10538,6 +10538,15 @@ ul {
   max-height: 50px;
 }
 
+.loader-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
 .loader {
   border: 16px solid #f3f3f3;
   /* Light grey */
@@ -10572,6 +10581,20 @@ ul {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+
+.overlay {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20000;
+  cursor: pointer;
 }
 
 
