--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10535,7 +10535,7 @@ ul {
 }
 
 .img-logo {
-  max-height: 50px;
+  max-height: 35px;
 }
 
 .loader-wrapper {
@@ -10595,6 +10595,53 @@ ul {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20000;
   cursor: pointer;
+}
+
+.panel h2 {
+  color: #444444;
+  font-size: 40px;
+}
+
+.panel p {
+  color: #777777;
+  font-size: 14px;
+  margin-bottom: 30px;
+  line-height: 24px;
+}
+
+.login-form .form-control {
+  border: 1px solid #f86a2d;
+  border-radius: 4px;
+  font-size: 14px;
+  height: 50px;
+}
+
+.main-div {
+  border-radius: 2px;
+  margin: 10px auto 30px;
+  max-width: 38%;
+  padding: 50px 70px 70px 71px;
+}
+
+.login-form {
+  text-align: center;
+}
+
+.login-form .btn.btn-primary {
+  background: #f86a2d;
+  border-color: #f86a2d;
+  font-size: 14px;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  padding: 0px;
+}
+
+.description {
+  color: #777777;
+  text-align: left;
+  font-size: 18px;
+  margin-bottom: 30px;
 }
 
 
