--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10639,8 +10639,10 @@ ul {
 }
 
 .panel h2 {
+  padding-top: 30px;
   color: #444444;
   font-size: 40px;
+  text-align: center;
 }
 
 .panel p {
@@ -10655,13 +10657,6 @@ ul {
   border-radius: 4px;
   font-size: 14px;
   height: 50px;
-}
-
-.main-div {
-  border-radius: 2px;
-  margin: 10px auto 30px;
-  max-width: 38%;
-  padding: 50px 70px 70px 71px;
 }
 
 .login-form {
