--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -161,8 +161,10 @@ ul {
 
 //Login
 .panel h2 {
+  padding-top: 30px;
   color: #444444;
   font-size: 40px;
+  text-align: center;
 }
 .panel p {
   color: #777777;
@@ -175,12 +177,6 @@ ul {
   border-radius: 4px;
   font-size: 14px;
   height: 50px;
-}
-.main-div {
-  border-radius: 2px;
-  margin: 10px auto 30px;
-  max-width: 38%;
-  padding: 50px 70px 70px 71px;
 }
 .login-form {
   text-align: center;
