--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -159,6 +159,14 @@ ul {
   cursor: pointer;
 }
 
+.textColor {
+  color: $text;
+}
+
+.textFox {
+  color: $foxi;
+}
+
 //Login
 .panel h2 {
   padding-top: 30px;
