--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -237,3 +237,11 @@ ul {
   color: black;
   text-decoration: none;
 }
+
+.chatTitle{
+  background-color: $foxi;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  text-align: center;
+  padding-bottom: 0.5px;
+}
