--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+//This is a stylesheet fot globally defined styles
 body {
   background-color: #f1f1f1 !important;
 }
