--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,9 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+// $font-family-sans-serif: 'Nunito', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+$font-family-sans-serif: 'Roboto';
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
